--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>英语单词配对游戏</h1>
+    <div id="high-score">最高分: 无</div>
     <div id="game-board">
         <!-- 单词和意思会动态生成在这里 -->
     </div>
