--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <div id="game-board">
         <!-- 单词和意思会动态生成在这里 -->
     </div>
+<audio id="background-music" loop autoplay>
+        <source src="background-music.mp3" type="audio/mpeg">
+        您的浏览器不支持音频播放。
+    </audio>
+    <div id="music-controls">
+        <button id="music-toggle">暂停音乐</button>
+        <input type="range" id="volume-control" min="0" max="1" step="0.1" value="0.5">
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
