--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     </div>
     <h1>英语单词配对游戏</h1>
     <div id="high-score">最高分: 无</div>
+    <div id="timer">时间: 0 秒</div>
+<!-- 添加计时器显示 -->
     <div id="game-board">
         <!-- 单词和意思会动态生成在这里 -->
     </div>
